[gd_scene load_steps=7 format=3 uid="uid://w7kncq52j6iq"]

[ext_resource type="PackedScene" uid="uid://5xij44tpohm5" path="res://smoke_trail.tscn" id="1_k1heu"]
[ext_resource type="Script" uid="uid://c5x3rdwpyl1af" path="res://new_missile.gd" id="1_l652b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tt2a3"]
resource_local_to_scene = true
radius = 0.01

[sub_resource type="Animation" id="Animation_l652b"]
resource_name = "Explode"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.01, 20.0, 0.01]
}

[sub_resource type="Animation" id="Animation_5gvps"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.01]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u5kgs"]
_data = {
&"Explode": SubResource("Animation_l652b"),
&"RESET": SubResource("Animation_5gvps")
}

[node name="NewMissile" type="Area2D"]
script = ExtResource("1_l652b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tt2a3")

[node name="SmokeTrail" parent="." instance=ExtResource("1_k1heu")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_u5kgs")
}

[connection signal="target_reached" from="SmokeTrail" to="." method="_on_target_reached"]
